update audio slideshows

--- a/audio/asp/en/0003_school-clothes_audio-slides.html
+++ b/audio/asp/en/0003_school-clothes_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>School clothes - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -93,12 +93,13 @@
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/01.jpg" />
 </center>
   
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
 <p>This dress is long.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -108,7 +109,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
 <p>This jersey is big.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/02.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -118,7 +119,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
 <p>This bag is big.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/03.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -128,7 +129,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
 <p>This belt is...</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/04.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -138,7 +139,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
 <p>This hat is small.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/05.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -148,7 +149,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
 <p>The socks are short.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/06.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -158,7 +159,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
 <p>But these shoes are new.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/07.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -168,7 +169,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
 <p>... they fit well.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/08.mp3" type="audio/mpeg"> </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0003_school-clothes/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -181,7 +182,7 @@
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/school-clothes'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/school-clothes'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
