--- a/audio/no/0073_å-telle-dyr_audio-slides.html
+++ b/audio/no/0073_å-telle-dyr_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Å telle dyr - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -98,7 +98,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/02.jpg" /></p>
-<p>Én elefant gikk for a drikke vann.</p>
+<p>Én elefant gikk for å drikke vann.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0073_å-telle-dyr/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0073_å-telle-dyr/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
@@ -108,7 +108,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/03.jpg" /></p>
-<p>To giraffer gikk for å drikke vann.</p>
+<p>To sjiraffer gikk for å drikke vann.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0073_å-telle-dyr/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0073_å-telle-dyr/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
