--- a/audio/no/0287_herr-flue-og-herr-storhode_audio-slides.html
+++ b/audio/no/0287_herr-flue-og-herr-storhode_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Herr Flue og herr Storhode - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -128,7 +128,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0287/05.jpg" /></p>
-<p>De kom til en elvebredde og begynte å krangle.</p>
+<p>De kom til en elvebredd og begynte å krangle.</p>
 <p>Herr Flue sa, &quot;du kan ikke hoppe over denne elva.&quot; &quot;Jo, jeg kan det! Det er du som ikke kan!&quot; svarte herr Storhode.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0287_herr-flue-og-herr-storhode/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0287_herr-flue-og-herr-storhode/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
