--- a/audio/asp/myx/0193_basooleli-babili-be-ntsala_audio-slides.html
+++ b/audio/asp/myx/0193_basooleli-babili-be-ntsala_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Basooleli babili be ntsala - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -154,7 +154,7 @@
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/two-hungry-boys'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/two-hungry-boys'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
