--- a/audio/nn/0001_ein-veldig-høg-mann_audio-slides.html
+++ b/audio/nn/0001_ein-veldig-høg-mann_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Ein veldig høg mann - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -188,7 +188,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>Han sett på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
+<p>Han sat på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/nn/0001_ein-veldig-høg-mann/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/nn/0001_ein-veldig-høg-mann/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
@@ -212,7 +212,7 @@
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man-1'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/very-tall-man'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
