--- a/audio/no/0001_en-veldig-høy-mann_audio-slides.html
+++ b/audio/no/0001_en-veldig-høy-mann_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>En veldig høy mann - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -212,7 +212,7 @@
 <p>
 Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/very-tall-man-1'>her</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/very-tall-man'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
