--- a/audio/no/0007_å-lete-etter-vann_audio-slides.html
+++ b/audio/no/0007_å-lete-etter-vann_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Å lete etter vann - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
