--- a/audio/no/0253_min-billedbok_audio-slides.html
+++ b/audio/no/0253_min-billedbok_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Min billedbok - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -21,7 +21,7 @@
     margin: 10px 10px 10px 50px;
   }
   img {
-    width: 25%;
+    width: 40%;
   }
   .license {
     font-size: small;
