--- a/audio/index.html
+++ b/audio/index.html
@@ -20,6 +20,24 @@
       <td><img style="vertical-align:top; height:50%" src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg" /></td></tr></table>
 
       <h2>List of stories by language</h2>
+        <h3>Chinese (Mandarin) [中文]</h3>
+          <ul>
+            <li><a href="zh/0001_一个很高的人_audio-slides.html" target="_blank">一个很高的人</a></li>
+            <li><a href="zh/0002_看看农场动物_audio-slides.html" target="_blank">看看农场动物</a></li>
+            <li><a href="zh/0003_校服_audio-slides.html" target="_blank">校服</a></li>
+            <li><a href="zh/0004_山羊、野狗、和水牛_audio-slides.html" target="_blank">山羊、野狗、和水牛</a></li>
+            <li><a href="zh/0006_阿南西和智慧_audio-slides.html" target="_blank">阿南西和智慧</a></li>
+            <li><a href="zh/0007_找水_audio-slides.html" target="_blank">找水</a></li>
+            <li><a href="zh/0008_你在做什么_audio-slides.html" target="_blank">你在做什么？</a></li>
+            <li><a href="zh/0009_我的小猫猫在哪儿_audio-slides.html" target="_blank">我的小猫猫在哪儿？</a></li>
+            <li><a href="zh/0030_感情_audio-slides.html" target="_blank">感情</a></li>
+            <li><a href="zh/0049_彩虹_audio-slides.html" target="_blank">彩虹</a></li>
+            <li><a href="zh/0053_这是我_audio-slides.html" target="_blank">这是我</a></li>
+            <li><a href="zh/0057_萨内在商店_audio-slides.html" target="_blank">萨内在商店</a></li>
+            <li><a href="zh/0064_乔伊上学_audio-slides.html" target="_blank">乔伊上学</a></li>
+            <li><a href="zh/0067_做菜_audio-slides.html" target="_blank">做菜</a></li>
+            <li><a href="zh/0231_气象书_audio-slides.html" target="_blank">气象书</a></li>
+          </ul>
         <h3>Esperanto</h3>
           <ul>
             <li><a href="eo/0001_altulo_audio-slides.html" target="_blank">Altulo</a></li>
