--- a/audio/zh/0006_阿南西和智慧_audio-slides.html
+++ b/audio/zh/0006_阿南西和智慧_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>天气 - Global African Storybook</title>
+  <title>阿南西和智慧 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -60,10 +60,10 @@
      https://developer.mozilla.org/en/CSS/CSS_transitions
      How to use CSS3 Transitions: */
   section {
-      -moz-transition: left 400ms linear 0s;
-      -webkit-transition: left 400ms linear 0s;
-      -ms-transition: left 400ms linear 0s;
-      transition: left 400ms linear 0s;
+      -moz-transition: left 100ms linear 0s;
+      -webkit-transition: left 100ms linear 0s;
+      -ms-transition: left 100ms linear 0s;
+      transition: left 100ms linear 0s;
   }
 
   /* Before */
@@ -87,17 +87,20 @@
 </head>
 <body>
 
-<section id="天气" class="slide level1">
-<h1>天气</h1>
+<section id="阿南西和智慧" class="slide level1">
+<h1>阿南西和智慧</h1>
+<p>（加纳民间故事）</p>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
-
+  
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/02.jpg" /></p>
-<p>多云是下雨的重要迹象</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个沙锅里面。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +108,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/03.jpg" /></p>
-<p>今天非常热。为什么呢</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p>有一天，尼亚美决定把藏有智慧的沙锅交给蜘蛛神阿南西。 每当阿南西揭开沙锅看进去，他就会学到新的东西，真的很兴奋！</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +118,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/04.jpg" /></p>
-<p>多云可以隐藏太阳。我多么喜欢多云的天气。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p>贪心的阿南西跟自己说， “我把沙锅安放在树顶上，那样所有的智慧都只属于我的！” 所以，他织出了一条长长的丝线，把沙锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始爬上那棵树， 可是沙锅老撞到他的腿，爬起来很辛苦。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +128,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/05.jpg" /></p>
-<p>娜布内老师问“外面下雨了吗？”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p>阿南西的儿子从树底下什么都看到了。 他跟阿南西说，“把沙锅扛在背上不就容易了吗？” 于是阿南西就试着把沙锅抗在背上，果然容易很多。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +138,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/06.jpg" /></p>
-<p>它是多风的天气吗</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把沙锅扔到树下。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +148,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/07.jpg" /></p>
-<p>告诉我更多关于天气的事情</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p>沙锅一落地就碎成小片。 沙锅碎了，所有的智慧也跑出来了，让大家自由分享。 就是这样，世界的人民才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0006_阿南西和智慧/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -150,12 +158,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="天气-1">天气</h2>
-<strong>作者:</strong> Clark Ness<br> <strong>绘画:</strong> Microsoft Clip Art, Jesse Breytenbach, Wiehan de Jager, Rijuta Ghate, Vusi Malindi<br> <strong>翻译:</strong> Xingxing (Winny) Wang<br> <strong>语言:</strong> 中文<br>
+<h2 id="阿南西和智慧-1">阿南西和智慧</h2>
+<strong>作者:</strong> Ghanaian folktale<br> <strong>绘画:</strong> Wiehan de Jager<br> <strong>翻译:</strong> dohliam<br> <strong>语言:</strong> 中文<br> <strong>语音:</strong> Xingxing (Winny) Wang<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
@@ -254,8 +262,8 @@ You can view the original story on the ASP website <a href='http://my.africansto
       Dz.params[keyVal[0]] = decodeURIComponent(keyVal[1]);
     });
   // Specific params handling
-    if (!+this.params.autoplay)
-      $$.forEach($$("video"), function(v){ v.controls = true });
+//     if (!+this.params.autoplay)
+//       $$.forEach($$("video"), function(v){ v.controls = true });
   }
 
   Dz.onkeydown = function(aEvent) {
@@ -390,6 +398,16 @@ You can view the original story on the ASP website <a href='http://my.africansto
           video.play();
         } else {
           video.pause();
+          video.currentTime = 0;
+        }
+      }
+      var audio = s.$("audio");
+      if (audio) {
+        if (audio.ended || audio.paused) {
+          audio.play();
+        } else {
+          audio.pause();
+          audio.currentTime = 0;
         }
       }
     }
@@ -469,6 +487,12 @@ You can view the original story on the ASP website <a href='http://my.africansto
       var video = old.$("video");
       if (video) {
         video.pause();
+        video.currentTime = 0;
+      }
+      var audio = old.$("audio");
+      if (audio) {
+        audio.pause();
+        audio.currentTime = 0;
       }
     }
     if (next) {
@@ -476,6 +500,10 @@ You can view the original story on the ASP website <a href='http://my.africansto
       var video = next.$("video");
       if (video && !!+this.params.autoplay) {
         video.play();
+      }
+      var audio = next.$("audio");
+      if (audio && !!+this.params.autoplay) {
+        audio.play();
       }
     } else {
       // That should not happen
