--- a/stories/zh/0151_天气.html
+++ b/stories/zh/0151_天气.html
@@ -70,7 +70,7 @@ Clark Ness<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/05.jpg" /></p>
 
-<p>Nabune老师问“外面下雨了吗？”</p>
+<p>娜布内老师问“外面下雨了吗？”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
