--- a/stories/zh/0306_我的女儿珀拉儿_slides.html
+++ b/stories/zh/0306_我的女儿珀拉儿_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>天气 - Global African Storybook</title>
+  <title>我的女儿珀拉儿 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="天气" class="slide level1">
-<h1>天气</h1>
+<section id="我的女儿珀拉儿" class="slide level1">
+<h1>我的女儿珀拉儿</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/02.jpg" /></p>
-<p>多云是下雨的重要迹象</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/02.jpg" /></p>
+<p>这是我的女儿珀拉儿。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/03.jpg" /></p>
-<p>今天非常热。为什么呢</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/03.jpg" /></p>
+<p>她是一个好女孩。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/04.jpg" /></p>
-<p>多云可以隐藏太阳。我多么喜欢多云的天气。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/04.jpg" /></p>
+<p>她喜欢讲故事。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/05.jpg" /></p>
-<p>娜布内老师问“外面下雨了吗？”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/05.jpg" /></p>
+<p>她的妈妈给她讲故事。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/06.jpg" /></p>
-<p>它是多风的天气吗</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/06.jpg" /></p>
+<p>珀拉儿也给她的朋友讲故事。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/07.jpg" /></p>
-<p>告诉我更多关于天气的事情</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/07.jpg" /></p>
+<p>有一天珀拉儿讲了一个非常好的故事。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,12 +150,30 @@
 </section>
 <section class="slide level1">
 
-<h2 id="天气-1">天气</h2>
-<strong>作者:</strong> Clark Ness<br> <strong>绘画:</strong> Microsoft Clip Art, Jesse Breytenbach, Wiehan de Jager, Rijuta Ghate, Vusi Malindi<br> <strong>翻译:</strong> Xingxing (Winny) Wang<br> <strong>语言:</strong> 中文<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/08.jpg" /></p>
+<p>这个故事是关于烹饪的。</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/09.jpg" /></p>
+<p>她的老师给了她一个蛋糕，所有人都很高兴。</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="我的女儿珀拉儿-1">我的女儿珀拉儿</h2>
+<strong>作者:</strong> Cissy Namugerwa<br> <strong>绘画:</strong> Vusi Malindi<br> <strong>翻译:</strong> Xiaoya YE<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-daughter-polar'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
