--- a/audio/zh/0049_彩虹_audio-slides.html
+++ b/audio/zh/0049_彩虹_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>天气 - Global African Storybook</title>
+  <title>彩虹 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -60,10 +60,10 @@
      https://developer.mozilla.org/en/CSS/CSS_transitions
      How to use CSS3 Transitions: */
   section {
-      -moz-transition: left 400ms linear 0s;
-      -webkit-transition: left 400ms linear 0s;
-      -ms-transition: left 400ms linear 0s;
-      transition: left 400ms linear 0s;
+      -moz-transition: left 100ms linear 0s;
+      -webkit-transition: left 100ms linear 0s;
+      -ms-transition: left 100ms linear 0s;
+      transition: left 100ms linear 0s;
   }
 
   /* Before */
@@ -87,17 +87,19 @@
 </head>
 <body>
 
-<section id="天气" class="slide level1">
-<h1>天气</h1>
+<section id="彩虹" class="slide level1">
+<h1>彩虹</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/01.jpg" />
 </center>
-
+  
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/02.jpg" /></p>
-<p>多云是下雨的重要迹象</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/02.jpg" /></p>
+<p>彩虹有很多种颜色。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/03.jpg" /></p>
-<p>今天非常热。为什么呢</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/03.jpg" /></p>
+<p>所有颜色都同时出现。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/04.jpg" /></p>
-<p>多云可以隐藏太阳。我多么喜欢多云的天气。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/04.jpg" /></p>
+<p>你会看到橙色。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/05.jpg" /></p>
-<p>娜布内老师问“外面下雨了吗？”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/05.jpg" /></p>
+<p>你会看到蓝色。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/06.jpg" /></p>
-<p>它是多风的天气吗</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/06.jpg" /></p>
+<p>你会看到红色。</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/07.jpg" /></p>
-<p>告诉我更多关于天气的事情</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/07.jpg" /></p>
+<p>七彩的颜色多漂亮啊！</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/zh/0049_彩虹/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -150,12 +157,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="天气-1">天气</h2>
-<strong>作者:</strong> Clark Ness<br> <strong>绘画:</strong> Microsoft Clip Art, Jesse Breytenbach, Wiehan de Jager, Rijuta Ghate, Vusi Malindi<br> <strong>翻译:</strong> Xingxing (Winny) Wang<br> <strong>语言:</strong> 中文<br>
+<h2 id="彩虹-1">彩虹</h2>
+<strong>作者:</strong> Ursula Nafula<br> <strong>绘画:</strong> Catherine Groenewald, Wiehan de Jager<br> <strong>翻译:</strong> dohliam<br> <strong>语言:</strong> 中文<br> <strong>语音:</strong> Xingxing (Winny) Wang<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/rainbow'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
@@ -254,8 +261,8 @@ You can view the original story on the ASP website <a href='http://my.africansto
       Dz.params[keyVal[0]] = decodeURIComponent(keyVal[1]);
     });
   // Specific params handling
-    if (!+this.params.autoplay)
-      $$.forEach($$("video"), function(v){ v.controls = true });
+//     if (!+this.params.autoplay)
+//       $$.forEach($$("video"), function(v){ v.controls = true });
   }
 
   Dz.onkeydown = function(aEvent) {
@@ -390,6 +397,16 @@ You can view the original story on the ASP website <a href='http://my.africansto
           video.play();
         } else {
           video.pause();
+          video.currentTime = 0;
+        }
+      }
+      var audio = s.$("audio");
+      if (audio) {
+        if (audio.ended || audio.paused) {
+          audio.play();
+        } else {
+          audio.pause();
+          audio.currentTime = 0;
         }
       }
     }
@@ -469,6 +486,12 @@ You can view the original story on the ASP website <a href='http://my.africansto
       var video = old.$("video");
       if (video) {
         video.pause();
+        video.currentTime = 0;
+      }
+      var audio = old.$("audio");
+      if (audio) {
+        audio.pause();
+        audio.currentTime = 0;
       }
     }
     if (next) {
@@ -476,6 +499,10 @@ You can view the original story on the ASP website <a href='http://my.africansto
       var video = next.$("video");
       if (video && !!+this.params.autoplay) {
         video.play();
+      }
+      var audio = next.$("audio");
+      if (audio && !!+this.params.autoplay) {
+        audio.play();
       }
     } else {
       // That should not happen
