update audio index

--- a/audio/index.html
+++ b/audio/index.html
@@ -43,6 +43,12 @@
             <li><a href="eo/0001_altulo_audio-slides.html" target="_blank">Altulo</a></li>
             <li><a href="eo/0112_mia-korpo_audio-slides.html" target="_blank">Mia korpo</a></li>
           </ul>
+        <h3>Gujarati [ગુજરાતી]</h3>
+          <ul>
+            <li><a href="gu/0049_મેઘધનુષ્ય_audio-slides.html" target="_blank">મેઘધનુષ્ય</a></li>
+            <li><a href="gu/0093_મારો-બાબ્લો_audio-slides.html" target="_blank">મારો બાબ્લો</a></li>
+            <li><a href="gu/0127_વિવિધ-નાતકો_audio-slides.html" target="_blank">વિવિધ નાતકો</a></li>
+          </ul>
         <h3>Norwegian (Bokmål)</h3>
           <ul>
             <li><a href="no/0001_en-veldig-høy-mann_audio-slides.html" target="_blank">En veldig høy mann</a></li>
