fix missing line in 0093

--- a/audio/gu/0093_મારો-બાબ્લો_audio-slides.html
+++ b/audio/gu/0093_મારો-બાબ્લો_audio-slides.html
@@ -118,6 +118,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/04.jpg" /></p>
+<p>નાસ્તા ખઐને તે એક મિત્ર સાથે રમવા જાયે.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/gu/0093_મારો-બાબ્લો/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/gu/0093_મારો-બાબ્લો/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
